# ai-release-metadata

./: .gitignore  README.md  demo_otel.py  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
ai_release_metadata/: __init__.py  prompts.py
ai_release_metadata.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ai_release_metadata/core/: context.py  models.py  sdk.py
ai_release_metadata/integrations/: base.py  opentelemetry.py  structlog.py
ai_release_metadata/plugins/: __init__.py  base.py  env.py  git.py  github.py
ai_release_tracer/: __init__.py
ai_release_tracer/core/: config.py  context.py  models.py
ai_release_tracer/extractors/: base.py  env.py
ai_release_tracer/integrations/: structlog.py
demo/: app.py
docs/: architecture.md  design-decisions.md  exporters.md  metadata-schema.md  plugin-development.md  roadmap.md
tests/: test_context.py  test_e2e_fastapi.py  test_extractors.py  test_integrations.py  test_plugins.py  test_prompts.py
